--- a/checkpoints/vae_lr_0002_bs_64_scale_1_npoints_128_radius_02_latent_size_2_bimanual/opt.yaml
+++ b/checkpoints/vae_lr_0002_bs_64_scale_1_npoints_128_radius_02_latent_size_2_bimanual/opt.yaml
@@ -7,12 +7,13 @@ blacklisted_categories: ''
 checkpoints_dir: ./checkpoints
 confidence_weight: 1.0
 continue_train: false
-dataset_root_folder: da2_dataset
+dataset_root_folder: da2_dataset/
 dataset_split: train
 depth_noise: 0.0
 epoch_count: 1
 gpu_ids:
-- 0
+- 4
+- 5
 grasps_folder_name: grasps
 grasps_ratio: 1.0
 gripper: panda
@@ -20,6 +21,7 @@ gripper_pc_npoints: -1
 init_gain: 0.02
 init_type: normal
 is_bimanual: true
+is_bimanual_v2: false
 is_train: true
 kl_loss_weight: 0.01
 latent_size: 2
@@ -37,7 +39,7 @@ npoints: 1024
 num_grasp_clusters: 32
 num_grasps_per_object: 64
 num_objects_per_batch: 1
-num_threads: 3
+num_threads: 16
 occlusion_dropout_rate: 0
 occlusion_nclusters: 0
 phase: train
