Feat: add visualize code which check input data is right

--- a/checkpoints/vae_lr_0002_bs_64_scale_1_npoints_128_radius_02_latent_size_2_bimanual/opt.yaml
+++ b/checkpoints/vae_lr_0002_bs_64_scale_1_npoints_128_radius_02_latent_size_2_bimanual/opt.yaml
@@ -48,7 +48,7 @@ print_freq: 100
 run_test_freq: 1
 save_epoch_freq: 1
 save_latest_freq: 250
-seed: null
+seed: 7
 serial_batches: false
 skip_error: false
 splits_folder_name: splits
