--- a/checkpoints/vae_lr_0002_bs_64_scale_1_npoints_128_radius_02_latent_size_2/opt.yaml
+++ b/checkpoints/vae_lr_0002_bs_64_scale_1_npoints_128_radius_02_latent_size_2/opt.yaml
@@ -6,7 +6,7 @@ beta1: 0.9
 blacklisted_categories: ''
 checkpoints_dir: ./checkpoints
 confidence_weight: 1.0
-continue_train: true
+continue_train: false
 dataset_root_folder: unified_grasp_data
 dataset_split: train
 depth_noise: 0.0
@@ -38,7 +38,7 @@ npoints: 1024
 num_grasp_clusters: 32
 num_grasps_per_object: 64
 num_objects_per_batch: 1
-num_threads: 8
+num_threads: 3
 occlusion_dropout_rate: 0
 occlusion_nclusters: 0
 phase: train
