Feat: fix grasp transform when testin and backwarding

--- a/checkpoints/vae_lr_0002_bs_64_scale_1_npoints_128_radius_02_latent_size_2/opt.yaml
+++ b/checkpoints/vae_lr_0002_bs_64_scale_1_npoints_128_radius_02_latent_size_2/opt.yaml
@@ -3,7 +3,7 @@ arch: vae
 balanced_data: false
 batch_size: 64
 beta1: 0.9
-blacklisted_categories: ''
+blacklisted_categories: mug
 checkpoints_dir: ./checkpoints
 confidence_weight: 1.0
 continue_train: false
