--- a/checkpoints/vae_lr_0002_bs_64_scale_1_npoints_128_radius_02_latent_size_2_bimanual/opt.yaml
+++ b/checkpoints/vae_lr_0002_bs_64_scale_1_npoints_128_radius_02_latent_size_2_bimanual/opt.yaml
@@ -7,15 +7,14 @@ blacklisted_categories: ''
 checkpoints_dir: ./checkpoints
 confidence_weight: 1.0
 continue_train: false
-dataset_root_folder: da2_dataset/
+dataset_root_folder: da2_dataset
 dataset_split: train
 depth_noise: 0.0
 epoch_count: 1
 gpu_ids:
-- 0
 - 1
+- 3
 - 4
-- 6
 grasps_folder_name: grasps
 grasps_ratio: 1.0
 gripper: panda
@@ -41,11 +40,7 @@ npoints: 1024
 num_grasp_clusters: 32
 num_grasps_per_object: 64
 num_objects_per_batch: 1
-<<<<<<< HEAD
-num_threads: 64
-=======
-num_threads: 16
->>>>>>> 2ab09b322a074acee19569dcb46665c0b300c1a2
+num_threads: 32
 occlusion_dropout_rate: 0
 occlusion_nclusters: 0
 phase: train
@@ -55,7 +50,7 @@ print_freq: 100
 run_test_freq: 1
 save_epoch_freq: 1
 save_latest_freq: 250
-seed: null
+seed: 7
 serial_batches: false
 skip_error: false
 splits_folder_name: splits
