--- a/checkpoints/vae_lr_0002_bs_64_scale_1_npoints_128_radius_02_latent_size_2/opt.yaml
+++ b/checkpoints/vae_lr_0002_bs_64_scale_1_npoints_128_radius_02_latent_size_2/opt.yaml
@@ -3,7 +3,7 @@ arch: vae
 balanced_data: false
 batch_size: 64
 beta1: 0.9
-blacklisted_categories: mug
+blacklisted_categories: ''
 checkpoints_dir: ./checkpoints
 confidence_weight: 1.0
 continue_train: false
@@ -12,8 +12,7 @@ dataset_split: train
 depth_noise: 0.0
 epoch_count: 1
 gpu_ids:
-- 0
-- 2
+- 7
 grasps_folder_name: grasps
 grasps_ratio: 1.0
 gripper: panda
@@ -22,6 +21,7 @@ init_gain: 0.02
 init_type: normal
 is_bimanual: false
 is_bimanual_v2: false
+is_dgcnn: false
 is_train: true
 kl_loss_weight: 0.01
 latent_size: 2
@@ -39,7 +39,7 @@ npoints: 1024
 num_grasp_clusters: 32
 num_grasps_per_object: 64
 num_objects_per_batch: 1
-num_threads: 32
+num_threads: 3
 occlusion_dropout_rate: 0
 occlusion_nclusters: 0
 phase: train
