Feat: fix visualize code for bimanual v2

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,15 +11,13 @@
                 "vae",
                 "--dataset_root_folder",
                 "da2_dataset",
-                "--is_bimanual",
+                "--is_bimanual_v2",
                 "True",
                 "--num_threads",
-                "16",
-                "--continue_train",
-                "--which_epoch",
-                "956",
-                "--seed",
-                "7"
+                "1",
+                "--latent_size",
+                "5",
+                
             ],
             "console": "integratedTerminal",
         },
